--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -1,29 +1,31 @@
-<h2>Sign up</h2>
+<div class="offset-4">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "customers/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "customer/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field pb-3">
+      <%= f.label :メールアドレス, class: "font-weight-bold" %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "w-50" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="field pb-3 font-weight-bold">
+      <%= f.label :パスワード %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %>文字以上)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password", class: "w-50" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field pb-4">
+      <%= f.label :パスワード再入力, class: "font-weight-bold" %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "w-50" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="actions pb-3">
+      <%= f.submit "Sign up", class: "btn btn-outline-light btn-lg w-50" %>
+    </div>
+  <% end %>
 
-<%= render "customer/shared/links" %>
+  <%= render "customer/shared/links" %>
+
+</div>
