--- a/app/views/customer/shared/_links.html.erb
+++ b/app/views/customer/shared/_links.html.erb
@@ -1,8 +1,8 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <%= link_to "ログインはこちら", new_session_path(resource_name), class: "text-white" %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <%= link_to "無料で新規登録", new_registration_path(resource_name), class: "text-white" %><br />
 <% end %>
 
