--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,16 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg  bg-warning">
+  <body class="bg-primary text-white">
+    <header class="shadow mb-5">
+      <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <h2 class="navbar-brand text-dark">gamix</h2>
+          <h2 class="navbar-brand"><i class="fas fa-solid fa-gamepad fa-lg"></i> Gamix</h2>
         </div>
 
-        <div class="navbar-nav ml-auto text-dark">
-          <%= render 'customer/searches/search' %>
+        <div class="navbar-nav ml-auto">
+          <%#= render 'customer/searches/search' %>
+          <%= link_to 'ログアウト', destroy_customer_session_path, method: :delete %>
         </div>
 
       </nav>
