--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="bg-primary text-white">
+  <body class="bg-dark text-white">
     <header class="shadow mb-5">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
