--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<div class="offset-3">
+  <h2>ジャンル編集</h2>
+
+  <%= form_with model: @genre, url: admin_genre_path(@genre), method: :patch, class: "py-5", local: true do |f| %>
+    <%= f.label :ジャンル名 %>
+    <%= f.text_field :genre_name %>
+    <%= f.submit "更新", class: "btn btn-success offset-1" %>
+    <%= link_to "削除", admin_genre_path(@genre), method: :delete, class: "btn btn-danger offset-1", "data-confirm" => "本当に削除しますか？" %>
+  <% end %>
+
+</div>
