--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<div class="offset-3">
+  <h2>ジャンル追加・一覧</h2>
+
+  <%# 新規ジャンル追加フォーム %>
+  <%= form_with model: @genre, url: admin_genres_path, method: :post, class: "py-5", local: true do |f| %>
+
+    <%= f.label :ジャンル名 %>
+    <%= f.text_field :genre_name %>
+    <%= f.submit "ジャンルを追加", class: "offset-1 btn btn-outline-light" %>
+
+  <% end %>
+
+  <%# ジャンル一覧 %>
+  <table class="table col-md-8">
+    <tbody>
+      <% @genres.each do |genre| %>
+        <tr>
+          <td class="text-white"><%= genre.genre_name %></td>
+          <td><%= link_to "編集", edit_admin_genre_path(genre.id), class: "btn btn-success" %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
