レビュー投稿画面作成

--- a/app/views/customer/games/new.html.erb
+++ b/app/views/customer/games/new.html.erb
@@ -11,7 +11,7 @@
 
       <div class="form-group py-3">
         <%= f.label :ゲーム説明 %><br>
-        <%= f.text_area :game_introduction, class: "w-75" %>
+        <%= f.text_area :game_introduction, rows: '5', class: "w-75" %>
       </div>
 
       <table>
