--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -1,6 +1,7 @@
+<!-- 新規登録画面 -->
 <div class="offset-4">
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= form_with model: @customer, url: customer_registration_path do |f| %>
     <%= render "customer/shared/error_messages", resource: resource %>
 
     <div class="field pb-3">
