--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,17 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <h2 class="navbar-brand"><i class="fas fa-solid fa-gamepad fa-lg"></i> Gamix</h2>
-        </div>
 
-        <div class="navbar-nav ml-auto">
-          <%#= render 'customer/searches/search' %>
-          <%= link_to 'ログアウト', destroy_customer_session_path, method: :delete %>
+
+          <ul class="navbar-nav ml-auto">
+            <% if customer_signed_in? %><!-- customerでログインされている -->
+              <li><%#= link_to 'マイページ', customer_customer_path %></li>
+              <li><%= link_to 'ログアウト', destroy_customer_session_path, method: :delete, class: "btn btn-outline-light" %></li>
+            <% else %><!-- ログインされていない -->
+              <li><%= link_to 'ログイン', customer_session_path, class: "btn btn-outline-light mr-2" %></li>
+              <li><%= link_to '新規登録', new_customer_registration_path, class: "btn btn-outline-light" %></li>
+            <% end %>
+          </ul>
         </div>
 
       </nav>
