--- a/app/views/customer/reviews/show.html.erb
+++ b/app/views/customer/reviews/show.html.erb
@@ -1,2 +1,30 @@
-<h1>Customer::Reviews#show</h1>
-<p>Find me in app/views/customer/reviews/show.html.erb</p>
+<div>
+  <%= link_to customer_game_path(@game), class: "h3" do %>
+    <%= @game.game_name %>
+  <% end %>
+
+  <%# 星評価 %>
+  <div class="relative-post-evaluation pt-5">
+    <span id="star-rate-<%= @review.id %>"></span>
+    <script>
+      $('#star-rate-<%= @review.id %>').raty({
+        size: 36,
+        starOff: "<%= asset_path('star-off.png') %>",
+        starOn: "<%= asset_path('star-on.png') %>",
+        starHalf: "<%= asset_path('star-half.png') %>",
+        half: true,
+        readOnly: true,
+        score: <%= @review.evaluation %>,
+      });
+    </script>
+    <%= @review.evaluation %>
+  </div>
+
+  <div class="font-weight-bold"><%= @review.review_title %></div>
+  <p class="pt-2">| 投稿日：<%= @review.created_at.strftime('%Y年%m月%d日') %> |</p>
+
+  <%= @review.review %>
+
+  <%# コメント・いいね・ユーザー画像・ユーザーネーム追加する %>
+
+</div>
