--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
           <ul class="navbar-nav ml-auto">
             <% if customer_signed_in? %><!-- customerでログインされている -->
-              <li><%#= link_to 'マイページ', customer_customer_path %></li>
+              <li><%= link_to 'マイページ', customer_customer_path(current_customer), class: "btn btn-outline-light mr-2" %></li>
               <li><%= link_to 'ログアウト', destroy_customer_session_path, method: :delete, class: "btn btn-outline-light" %></li>
             <% else %><!-- ログインされていない -->
               <li><%= link_to 'ログイン', customer_session_path, class: "btn btn-outline-light mr-2" %></li>
