--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<div>
+  <div class="h2 mb-5">会員一覧</div>
+  <% @customers.each do |customer| %>
+  <div class="mb-3">
+    <div class="d-inline-flex">
+      <div>
+        <%= image_tag customer.get_profile_image(100,100) %>
+      </div>
+      <div class="ml-2">
+        <%= link_to admin_customer_path(customer.id) do %>
+          <h5><%= customer.nickname %></h5>
+        <% end %>
+        <%= customer.email %>
+      </div>
+    </div>
+  </div>
+  <% end %>
+  <%= paginate @customers %>
+</div>
