--- a/app/views/admin/games/index.html.erb
+++ b/app/views/admin/games/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Admin::Games#index</h1>
-<p>Find me in app/views/admin/games/index.html.erb</p>
+<div>
+  <div class="h2 mb-5">ゲーム一覧</div>
+  <% @games.each do |game| %>
+    <div class="d-inline-flex mb-3">
+      <div>
+        <%= image_tag game.get_game_image, size: "200x134" %>
+      </div>
+      <div class="ml-2">
+        <%= link_to admin_game_path(game.id) do %>
+          <h5><%= game.game_name %></h5>
+        <% end %>
+        <%= game.game_introduction %>
+      </div>
+    </div>
+  <% end %>
+  <%= paginate @games %>
+</div>
