--- a/app/views/admin/games/new.html.erb
+++ b/app/views/admin/games/new.html.erb
@@ -1,2 +1,43 @@
-<h1>Admin::Games#new</h1>
-<p>Find me in app/views/admin/games/new.html.erb</p>
+<%= form_with model: @game, url: admin_games_path do |f| %>
+
+  <div class="offset-3">
+
+    <%= f.file_field :game_image, accept: "image/*", class: "pb-4" %>
+
+      <div class="form-group">
+        <%= f.label :タイトル %><br>
+        <%= f.text_field :game_name, class: "w-75" %>
+      </div>
+
+      <div class="form-group py-3">
+        <%= f.label :ゲーム説明 %><br>
+        <%= f.text_area :game_introduction, rows: '5', class: "w-75" %>
+      </div>
+
+      <table>
+        <tbody>
+          <tr>
+            <td><%= f.label :ジャンル %></td>
+            <td><%= f.collection_select :genre_id, Genre.all, :id, :genre_name, prompt: "--選択して下さい--", class: 'form-control' %></td>
+          </tr>
+
+          <tr>
+            <td><%= f.label :対応プラットフォーム %></td>
+            <td><%= f.collection_select :platform_id, Platform.all, :id, :platform_name, prompt: "--選択して下さい--", class: 'form-control' %></td>
+          </tr>
+
+          <tr>
+            <td><%= f.label :対象年齢 %></td>
+            <td><%= f.collection_select :target_age_id, TargetAge.all, :id, :target_age, prompt: "--選択して下さい--", class: 'form-control' %></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <%= f.label :価格, class: "pt-4" %><br>
+      <%= f.text_field :price, placeholder: "半角数字のみ入力" %>
+
+      <%= f.submit 'ゲームを追加', class: "btn btn-lg btn-outline-light offset-4" %>
+
+    <% end %>
+
+  </div>
