--- a/app/views/customer/reviews/show.html.erb
+++ b/app/views/customer/reviews/show.html.erb
@@ -3,8 +3,12 @@
     <%= @game.game_name %>
   <% end %>
 
+  <div class="pt-5">
+    <%= image_tag @review.customer.get_profile_image(100,100) %>
+  </div>
+
   <%# 星評価 %>
-  <div class="relative-post-evaluation pt-5">
+  <div class="relative-post-evaluation">
     <span id="star-rate-<%= @review.id %>"></span>
     <script>
       $('#star-rate-<%= @review.id %>').raty({
@@ -21,9 +25,20 @@
   </div>
 
   <div class="font-weight-bold"><%= @review.review_title %></div>
-  <p class="pt-2">| 投稿日：<%= @review.created_at.strftime('%Y年%m月%d日') %> |</p>
+
+  <p class="pt-2">
+    <%= link_to customer_customer_path(@review.customer) do %>
+      <%= @review.customer.nickname %>さん
+    <% end %>
+    | 投稿日：<%= @review.created_at.strftime('%Y年%m月%d日') %>
+    </p>
 
   <%= @review.review %>
+
+  <div id="favorite_buttons_<%= @review.id %>">
+    <%= render "favorites/favorites", review: @review %>
+  </div>
+
 
   <%# コメント・いいね・ユーザー画像・ユーザーネーム追加する %>
 
