--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
             <% if customer_signed_in? %><!-- customerでログインされている -->
               <li><%= link_to 'マイページ', customer_customer_path(current_customer), class: "btn btn-outline-light mr-2" %></li>
               <li><%= link_to 'ログアウト', destroy_customer_session_path, method: :delete, class: "btn btn-outline-light" %></li>
+            <% elsif admin_signed_in? %><!-- adminでログインされている -->
+              <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete %></li>
             <% else %><!-- ログインされていない -->
               <li><%= link_to 'ログイン', customer_session_path, class: "btn btn-outline-light mr-2" %></li>
               <li><%= link_to '新規登録', new_customer_registration_path, class: "btn btn-outline-light" %></li>
