--- a/app/views/customer/games/_review.html.erb
+++ b/app/views/customer/games/_review.html.erb
@@ -32,11 +32,10 @@
             score: <%= review.evaluation %>,
           });
         </script>
-        <%= @review.evaluation %>
       </div>
       <%# レビュータイトル %>
       <div class="font-weight-bold d-inline-flex">
-        <%= link_to customer_game_review_path(@game.id) do %>
+        <%= link_to customer_game_review_path(review.id, game_id: @game.id) do %>
           <%= review.review_title %>
         <% end %>
       </div>
