--- a/app/views/customer/games/new.html.erb
+++ b/app/views/customer/games/new.html.erb
@@ -2,6 +2,17 @@
 
   <div class="offset-3">
 
+    <%# エラーメッセージ %>
+    <% if @game.errors.any? %>
+      <div>
+        <ul style="color: red">
+          <% @game.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
     <%= f.file_field :game_image, accept: "image/*", class: "pb-4" %>
 
       <div class="form-group">
